fix: images includes in css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="name" content="content" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="icon" href="./img/bio.jpg">
+    <link rel="icon" href="./img/bio.png">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
